--- a/public/static/app/index/css/reset.css
+++ b/public/static/app/index/css/reset.css
@@ -10,9 +10,12 @@ a:link,a:visited,a:hover,a:active{text-decoration:none;}
 .mt40{margin-top:40px;}
 .mt50{margin-top:50px;}
 .ml30{margin-left:30px;}
+.mr20(margin-right:20px);
 .p10{padding: 10px;}
 .p20{padding: 20px;}
 .p30{padding: 30px;}
 .p40{padding: 40px;}
 .p50{padding: 50px;}
+
+
 
