--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -8,13 +8,43 @@
     <meta name="author" content="ThemeBucket">
     <link rel="shortcut icon" href="#" type="image/png">
 
-    <title>AdminEx后台模板 Bootstrap响应式后台管理模板-淘代码</title>
+    <title>美丽乡村后台管理系统</title>
 
     <!--icheck-->
+    <link href="/static/app/admin/js/iCheck/skins/minimal/minimal.css" rel="stylesheet">
+    <link href="/static/app/admin/js/iCheck/skins/minimal/red.css" rel="stylesheet">
+    <link href="/static/app/admin/js/iCheck/skins/minimal/green.css" rel="stylesheet">
+    <link href="/static/app/admin/js/iCheck/skins/minimal/blue.css" rel="stylesheet">
+    <link href="/static/app/admin/js/iCheck/skins/minimal/yellow.css" rel="stylesheet">
+    <link href="/static/app/admin/js/iCheck/skins/minimal/purple.css" rel="stylesheet">
+
+    <link href="/static/app/admin/js/iCheck/skins/square/square.css" rel="stylesheet">
+    <link href="/static/app/admin/js/iCheck/skins/square/red.css" rel="stylesheet">
+    <link href="/static/app/admin/js/iCheck/skins/square/green.css" rel="stylesheet">
+    <link href="/static/app/admin/js/iCheck/skins/square/blue.css" rel="stylesheet">
+    <link href="/static/app/admin/js/iCheck/skins/square/yellow.css" rel="stylesheet">
+    <link href="/static/app/admin/js/iCheck/skins/square/purple.css" rel="stylesheet">
+
+    <link href="/static/app/admin/js/iCheck/skins/flat/grey.css" rel="stylesheet">
+    <link href="/static/app/admin/js/iCheck/skins/flat/red.css" rel="stylesheet">
+    <link href="/static/app/admin/js/iCheck/skins/flat/green.css" rel="stylesheet">
+    <link href="/static/app/admin/js/iCheck/skins/flat/blue.css" rel="stylesheet">
+    <link href="/static/app/admin/js/iCheck/skins/flat/yellow.css" rel="stylesheet">
+    <link href="/static/app/admin/js/iCheck/skins/flat/purple.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="/static/app/admin/js/jquery-multi-select/css/multi-select.css" />
+
+    <!--file upload-->
+    <link rel="stylesheet" type="text/css" href="/static/app/admin/css/bootstrap-fileupload.min.css" />
+
+    <!--tags input-->
+    <link rel="stylesheet" type="text/css" href="/static/app/admin/js/jquery-tags-input/jquery.tagsinput.css" />
+
+
     <link href="/static/app/admin/js/iCheck/skins/minimal/minimal.css" rel="stylesheet">
     <link href="/static/app/admin/js/iCheck/skins/square/square.css" rel="stylesheet">
     <link href="/static/app/admin/js/iCheck/skins/square/red.css" rel="stylesheet">
     <link href="/static/app/admin/js/iCheck/skins/square/blue.css" rel="stylesheet">
+    <link href="/static/app/admin/css/toastr.min.css" rel="stylesheet">
 
     <!--dashboard calendar-->
     <link href="/static/app/admin/css/clndr.css" rel="stylesheet">
@@ -31,8 +61,8 @@
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-    <script src="/statuc/adminjs/html5shiv.js"></script>
-    <script src="/statuc/adminjs/respond.min.js"></script>
+    <script src="/statuc/admin/js/html5shiv.js"></script>
+    <script src="/statuc/admin/js/respond.min.js"></script>
     <![endif]-->
 </head>
 
@@ -55,7 +85,7 @@
         <div class="left-side-inner">
 
             <!-- visible to small devices only -->
-            <div class="visible-xs hidden-sm hidden-md hidden-lg">
+             <div class="visible-xs hidden-sm hidden-md hidden-lg">
                 <div class="media logged-user">
                     <img alt="" src="/static/app/admin/images/photos/user-avatar.png" class="media-object">
                     <div class="media-body">
@@ -74,8 +104,8 @@
 
             <!--sidebar nav start-->
             <ul class="nav nav-pills nav-stacked custom-nav">
-                <li class="active"><a href="index.html"><i class="fa fa-home"></i> <span>Dashboard</span></a></li>
-                <li class="menu-list"><a href=""><i class="fa fa-laptop"></i> <span>Layouts</span></a>
+                <li class="active"><a href="index.html"><i class="fa fa-home"></i> <span>控制列表</span></a></li>
+                <li class="menu-list"><a href=""><i class="fa fa-laptop"></i> <span>布局</span></a>
                     <ul class="sub-menu-list">
                         <li><a href="blank_page.html"> Blank Page</a></li>
                         <li><a href="boxed_view.html"> Boxed Page</a></li>
@@ -84,14 +114,12 @@
 
                     </ul>
                 </li>
-                <li class="menu-list"><a href=""><i class="fa fa-book"></i> <span>UI Elements</span></a>
+                <li class="menu-list"><a href=""><i class="fa fa-book"></i> <span>管理员管理</span></a>
                     <ul class="sub-menu-list">
-                        <li><a href="general.html"> General</a></li>
-                        <li><a href="buttons.html"> Buttons</a></li>
-                        <li><a href="tabs-accordions.html"> Tabs & Accordions</a></li>
-                        <li><a href="typography.html"> Typography</a></li>
-                        <li><a href="slider.html"> Slider</a></li>
-                        <li><a href="panels.html"> Panels</a></li>
+                        <li><a href="{:url('admin/user/index')}">管理员列表</a></li>
+                        <li><a href="tabs-accordions.html">管理员密码修改</a></li>
+                        <li><a href="{:url('admin/cate/index')}">管理员权限管理</a></li>
+                        <li><a href="{:url('admin/node/index')}"> 管理员节点管理</a></li>
                     </ul>
                 </li>
                 <li class="menu-list"><a href=""><i class="fa fa-cogs"></i> <span>Components</span></a>
@@ -175,7 +203,6 @@
         </div>
     </div>
     <!-- left side end-->
-
     <!-- main content start-->
     <div class="main-content" >
 
@@ -197,184 +224,21 @@
                 <ul class="notification-menu">
                     <li>
                         <a href="#" class="btn btn-default dropdown-toggle info-number" data-toggle="dropdown">
-                            <i class="fa fa-tasks"></i>
-                            <span class="badge">8</span>
+                            管理员角色:{$login_role}
                         </a>
-                        <div class="dropdown-menu dropdown-menu-head pull-right">
-                            <h5 class="title">You have 8 pending task</h5>
-                            <ul class="dropdown-list user-list">
-                                <li class="new">
-                                    <a href="#">
-                                        <div class="task-info">
-                                            <div>Database update</div>
-                                        </div>
-                                        <div class="progress progress-striped">
-                                            <div style="width: 40%" aria-valuemax="100" aria-valuemin="0" aria-valuenow="40" role="progressbar" class="progress-bar progress-bar-warning">
-                                                <span class="">40%</span>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li class="new">
-                                    <a href="#">
-                                        <div class="task-info">
-                                            <div>Dashboard done</div>
-                                        </div>
-                                        <div class="progress progress-striped">
-                                            <div style="width: 90%" aria-valuemax="100" aria-valuemin="0" aria-valuenow="90" role="progressbar" class="progress-bar progress-bar-success">
-                                                <span class="">90%</span>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <div class="task-info">
-                                            <div>Web Development</div>
-                                        </div>
-                                        <div class="progress progress-striped">
-                                            <div style="width: 66%" aria-valuemax="100" aria-valuemin="0" aria-valuenow="66" role="progressbar" class="progress-bar progress-bar-info">
-                                                <span class="">66% </span>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <div class="task-info">
-                                            <div>Mobile App</div>
-                                        </div>
-                                        <div class="progress progress-striped">
-                                            <div style="width: 33%" aria-valuemax="100" aria-valuemin="0" aria-valuenow="33" role="progressbar" class="progress-bar progress-bar-danger">
-                                                <span class="">33% </span>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <div class="task-info">
-                                            <div>Issues fixed</div>
-                                        </div>
-                                        <div class="progress progress-striped">
-                                            <div style="width: 80%" aria-valuemax="100" aria-valuemin="0" aria-valuenow="80" role="progressbar" class="progress-bar">
-                                                <span class="">80% </span>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li class="new"><a href="">See All Pending Task</a></li>
-                            </ul>
-                        </div>
                     </li>
                     <li>
-                        <a href="#" class="btn btn-default dropdown-toggle info-number" data-toggle="dropdown">
-                            <i class="fa fa-envelope-o"></i>
-                            <span class="badge">5</span>
+                        <a href="{:url('admin/index/exit')}" class="btn btn-default dropdown-toggle info-number" data-toggle="dropdown">
+                           退出登录
                         </a>
-                        <div class="dropdown-menu dropdown-menu-head pull-right">
-                            <h5 class="title">You have 5 Mails </h5>
-                            <ul class="dropdown-list normal-list">
-                                <li class="new">
-                                    <a href="">
-                                        <span class="thumb"><img src="/static/app/admin/images/photos/user1.png" alt="" /></span>
-                                        <span class="desc">
-                                          <span class="name">John Doe <span class="badge badge-success">new</span></span>
-                                          <span class="msg">Lorem ipsum dolor sit amet...</span>
-                                        </span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="">
-                                        <span class="thumb"><img src="/static/app/admin/images/photos/user2.png" alt="" /></span>
-                                        <span class="desc">
-                                          <span class="name">Jonathan Smith</span>
-                                          <span class="msg">Lorem ipsum dolor sit amet...</span>
-                                        </span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="">
-                                        <span class="thumb"><img src="/static/app/admin/images/photos/user3.png" alt="" /></span>
-                                        <span class="desc">
-                                          <span class="name">Jane Doe</span>
-                                          <span class="msg">Lorem ipsum dolor sit amet...</span>
-                                        </span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="">
-                                        <span class="thumb"><img src="/static/app/admin/images/photos/user4.png" alt="" /></span>
-                                        <span class="desc">
-                                          <span class="name">Mark Henry</span>
-                                          <span class="msg">Lorem ipsum dolor sit amet...</span>
-                                        </span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="">
-                                        <span class="thumb"><img src="/static/app/admin/images/photos/user5.png" alt="" /></span>
-                                        <span class="desc">
-                                          <span class="name">Jim Doe</span>
-                                          <span class="msg">Lorem ipsum dolor sit amet...</span>
-                                        </span>
-                                    </a>
-                                </li>
-                                <li class="new"><a href="">Read All Mails</a></li>
-                            </ul>
-                        </div>
                     </li>
+
                     <li>
-                        <a href="#" class="btn btn-default dropdown-toggle info-number" data-toggle="dropdown">
-                            <i class="fa fa-bell-o"></i>
-                            <span class="badge">4</span>
-                        </a>
-                        <div class="dropdown-menu dropdown-menu-head pull-right">
-                            <h5 class="title">Notifications</h5>
-                            <ul class="dropdown-list normal-list">
-                                <li class="new">
-                                    <a href="">
-                                        <span class="label label-danger"><i class="fa fa-bolt"></i></span>
-                                        <span class="name">Server #1 overloaded.  </span>
-                                        <em class="small">34 mins</em>
-                                    </a>
-                                </li>
-                                <li class="new">
-                                    <a href="">
-                                        <span class="label label-danger"><i class="fa fa-bolt"></i></span>
-                                        <span class="name">Server #3 overloaded.  </span>
-                                        <em class="small">1 hrs</em>
-                                    </a>
-                                </li>
-                                <li class="new">
-                                    <a href="">
-                                        <span class="label label-danger"><i class="fa fa-bolt"></i></span>
-                                        <span class="name">Server #5 overloaded.  </span>
-                                        <em class="small">4 hrs</em>
-                                    </a>
-                                </li>
-                                <li class="new">
-                                    <a href="">
-                                        <span class="label label-danger"><i class="fa fa-bolt"></i></span>
-                                        <span class="name">Server #31 overloaded.  </span>
-                                        <em class="small">4 hrs</em>
-                                    </a>
-                                </li>
-                                <li class="new"><a href="">See All Notifications</a></li>
-                            </ul>
-                        </div>
-                    </li>
-                    <li>
-                        <a href="#" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                            <img src="/static/app/admin/images/photos/user-avatar.png" alt="" />
-                            John Doe
+                        <a href="#" class="btn btn-default dropdown-toggle" ">
+                            <img src="/uploads/{$login_data['0']['photo']}" alt="" />
+                            {$login_data['0']['username']}
                             <span class="caret"></span>
                         </a>
-                        <ul class="dropdown-menu dropdown-menu-usermenu pull-right">
-                            <li><a href="#"><i class="fa fa-user"></i>  Profile</a></li>
-                            <li><a href="#"><i class="fa fa-cog"></i>  Settings</a></li>
-                            <li><a href="#"><i class="fa fa-sign-out"></i> Log Out</a></li>
-                        </ul>
                     </li>
 
                 </ul>
@@ -383,7 +247,7 @@
 
         </div>
         <!-- header section end-->
-
+        {block name="main"}
         <!-- page heading start-->
         <div class="page-heading">
             <h3>
@@ -889,8 +753,9 @@
 
     </div>
     <!-- main content end-->
+    {/block}
 </section>
-
+{block name="myjs"}
 <!-- Placed js at the end of the document so the pages load faster -->
 <script src="/static/app/admin/js/jquery-1.10.2.min.js"></script>
 <script src="/static/app/admin/js/jquery-ui-1.9.2.custom.min.js"></script>
@@ -932,7 +797,7 @@
 
 <!--Dashboard Charts-->
 <script src="/static/app/admin/js/dashboard-chart-init.js"></script>
-
+{/block}
 
 </body>
 </html>
