--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -235,7 +235,8 @@
                         </a>
                     </li>
                     <li>
-                        <a href="{:url('admin/index/exit')}" class="btn btn-default dropdown-toggle info-number" data-toggle="dropdown">
+
+                        <a href="{:url('admin/index/exit')}" class="btn btn-default mt10">
                            退出登录
                         </a>
                     </li>
