--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -236,7 +236,7 @@
                     </li>
                     <li>
 
-                        <a href="{:url('admin/index/exit')}" class="btn btn-default mt10">
+                        <a href="{:url('admin/index/loginexit')}" class="btn btn-default mt10">
                            退出登录
                         </a>
                     </li>
