--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -25,6 +25,9 @@
 
     <!--<link href="http://cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.css" rel="stylesheet" type="text/css" />-->
     <link href="/static/app/index/css/city-picker.css" rel="stylesheet" type="text/css" />
+    {css href="/static/app/index/css/reset.css"}
+    <!--{!&#45;&#45;三级地址联动&#45;&#45;}-->
+    {css href="http://cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.css" rel="stylesheet" type="text/css"}
 
 
 
@@ -173,7 +176,7 @@
               <a href="#"><i class="glyphicon glyphicon-log-in"></i>注册</a>
               <a href="#"><i class="glyphicon glyphicon-log-in"></i>登陆</a>
               <a href="#"><i class="glyphicon glyphicon-log-out"></i>退出</a>
-              <a href="#"><i class="glyphicon glyphicon-user"></i>个人中心</a>
+              <a href="{:url('index/personal/index')}"><i class="glyphicon glyphicon-user"></i>个人中心</a>
               
             </div>
           </div>
