--- a/public/static/app/index/css/reset.css
+++ b/public/static/app/index/css/reset.css
@@ -9,8 +9,17 @@ a:link,a:visited,a:hover,a:active{text-decoration:none;}
 .mt30{margin-top:30px;}
 .mt40{margin-top:40px;}
 .mt50{margin-top:50px;}
+.ml10{margin-left:10px;}
+.ml15{margin-left:15px;}
+.ml20{margin-left:20px;}
 .ml30{margin-left:30px;}
-.mr20(margin-right:20px);
+.ml40{margin-left:40px;}
+.ml50{margin-left:50px;}
+.mr10{margin-right:10px;}
+.mr20{margin-right:20px;}
+.mr30{margin-right:30px;}
+.mr40{margin-right:40px;}
+.mr50{margin-right:50px;}
 .p10{padding: 10px;}
 .p20{padding: 20px;}
 .p30{padding: 30px;}
