商品详情页

--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -190,7 +190,7 @@
             <!--Logo Wrap End-->
             <!--Cart Wrap Start-->
             <div class="gt_cart_wrap">
-              <a href="#"><i class="fa fa-cart-arrow-down"></i>&nbsp 购物车</a>
+              <a href="{:url('index/cart/index')}"><i class="fa fa-cart-arrow-down"></i>&nbsp 购物车</a>
                 <div class="gt_cart_list">
                   <ul>
                       <li>
