--- a/application/admin/view/index/busIndex.html
+++ b/application/admin/view/index/busIndex.html
@@ -8,13 +8,14 @@
     <meta name="author" content="ThemeBucket">
     <link rel="shortcut icon" href="#" type="image/png">
 
-    <title>{$res['b_name']}</title>
+    <title>{$bus_res['b_name']}</title>
 
     <!--icheck-->
     <link href="/static/app/admin/js/iCheck/skins/minimal/minimal.css" rel="stylesheet">
     <link href="/static/app/admin/js/iCheck/skins/square/square.css" rel="stylesheet">
     <link href="/static/app/admin/js/iCheck/skins/square/red.css" rel="stylesheet">
     <link href="/static/app/admin/js/iCheck/skins/square/blue.css" rel="stylesheet">
+    <link href="/static/app/admin/css/toastr.min.css" rel="stylesheet">
 
     <!--dashboard calendar-->
     <link href="/static/app/admin/css/clndr.css" rel="stylesheet">
@@ -25,17 +26,12 @@
     <!--common-->
     <link href="/static/app/admin/css/style.css" rel="stylesheet">
     <link href="/static/app/admin/css/style-responsive.css" rel="stylesheet">
-
-
-
-
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
     <script src="/statuc/admin/js/html5shiv.js"></script>
     <script src="/statuc/admin/js/respond.min.js"></script>
     <![endif]-->
 </head>
-
 <body class="sticky-header">
 
 <section>
@@ -85,16 +81,19 @@
 
                     </ul>
                 </li>
-                <li class="menu-list"><a href=""><i class="fa fa-book"></i> <span>商品管理</span></a>
+                {volist name ='cate' id="cate"}
+                <li class="menu-list"><a href=""><i class="fa fa-book"></i> <span>{$cate.c_name}管理</span></a>
                     <ul class="sub-menu-list">
-                        <li><a href="../user/general.html"> 商品列表</a></li>
-                        <li><a href="buttons.html"> 添加商品</a></li>
-
+                        <li><a href="{:url('admin/HotelCate/read',['id'=>$cate.id])}">{$cate.c_name}分类管理</a></li>
+                    </ul>
+                    <ul class="sub-menu-list">
+                        <li><a href="{:url('admin/Hotel/index')}">{$cate.c_name}列表</a></li>
                     </ul>
                 </li>
+                {/volist}
                 <li class="menu-list"><a href=""><i class="fa fa-cogs"></i> <span>店铺信息管理</span></a>
                     <ul class="sub-menu-list">
-                        <li><a href="grids.html"> 店铺基本信息</a></li>
+                        <li><a href="{:url('admin/BusInfo/index')}"> 店铺基本信息</a></li>
                         <li><a href="gallery.html"> 修改密码</a></li>
                         <li><a href="calendar.html"> Calendar</a></li>
                         <li><a href="tree_view.html"> Tree View</a></li>
@@ -366,7 +365,7 @@
                     <li>
                         <a href="#" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
                             <img src="/static/app/admin/images/photos/user-avatar.png" alt="" />
-                            放logo{$res['b_logo']}{$res['b_name']}
+                            放logo{$bus_res['b_logo']}{$bus_res['b_name']}
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-usermenu pull-right">
@@ -382,7 +381,7 @@
 
         </div>
         <!-- header section end-->
-
+        {block name='main'}
         <!-- page heading start-->
         <div class="page-heading">
             <h3>
@@ -878,7 +877,7 @@
             </div>
         </div>
         <!--body wrapper end-->
-
+        {/block}
         <!--footer section start-->
         <footer>
             2017 &copy; AdminEx by <a href="{:url('index/index/index')}" target="_blank">魅丽乡村</a>
@@ -888,8 +887,8 @@
 
     </div>
     <!-- main content end-->
-</section>
-
+   {/block}
+{block name='myjs'}
 <!-- Placed js at the end of the document so the pages load faster -->
 <script src="/static/app/admin/js/jquery-1.10.2.min.js"></script>
 <script src="/static/app/admin/js/jquery-ui-1.9.2.custom.min.js"></script>
@@ -931,7 +930,8 @@
 
 <!--Dashboard Charts-->
 <script src="/static/app/admin/js/dashboard-chart-init.js"></script>
+    <script src="/static/app/admin/js/toastr.min.js"></script>
 
-
+    {/block}
 </body>
 </html>
