用户注册登录更新&管理员密码修改

--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -118,7 +118,7 @@
                 <li class="menu-list"><a href=""><i class="fa fa-book"></i> <span>管理员管理</span></a>
                     <ul class="sub-menu-list">
                         <li><a href="{:url('admin/user/index')}">管理员列表</a></li>
-                        <li><a href="tabs-accordions.html">管理员密码修改</a></li>
+                      <!--   <li><a href="{:url('admin/user/password')}">管理员密码修改</a></li> -->
                         <li><a href="{:url('admin/cate/index')}">管理员权限管理</a></li>
                         <li><a href="{:url('admin/node/index')}"> 管理员节点管理</a></li>
                     </ul>
@@ -236,7 +236,7 @@
                     </li>
                     <li>
 
-                        <a href="{:url('admin/index/exit')}" class="btn btn-default mt10">
+                        <a href="{:url('admin/index/loginexit')}" class="btn btn-default mt10">
                            退出登录
                         </a>
                     </li>
