--- a/application/admin/view/index/busIndex.html
+++ b/application/admin/view/index/busIndex.html
@@ -27,8 +27,6 @@
     <link href="/static/app/admin/css/style-responsive.css" rel="stylesheet">
 
 
-
-
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
     <script src="/statuc/admin/js/html5shiv.js"></script>
@@ -92,6 +90,16 @@
 
                     </ul>
                 </li>
+
+                <!--yjf-->
+                 <li class="menu-list"><a href=""><i class="fa fa-book"></i> <span>活动管理</span></a>
+                    <ul class="sub-menu-list">
+                        <li><a href="../user/general.html"> 发布活动</a></li>
+                        <li><a href="buttons.html"> 修改活动</a></li>
+                    </ul>
+                </li>
+                <!--yjf-->
+
                 <li class="menu-list"><a href=""><i class="fa fa-cogs"></i> <span>店铺信息管理</span></a>
                     <ul class="sub-menu-list">
                         <li><a href="grids.html"> 店铺基本信息</a></li>
