--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -22,11 +22,88 @@
     <link href="/static/app/index/css/responsive.css" rel="stylesheet">
     <!--<link href="/static/app/index/css/bootstrap.min.css" rel="stylesheet">-->
     <!--<script src="/static/app/index/js/jquery-1.8.3.min.js"></script>-->
-
     <!--<link href="http://cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.css" rel="stylesheet" type="text/css" />-->
     <link href="/static/app/index/css/city-picker.css" rel="stylesheet" type="text/css" />
+ 
+ <!--yjf-->
+<!--     <link href="/static/app/index/css/bootstrap.min.css" rel="stylesheet">
+    <script src="/static/app/index/js/jquery-1.8.3.min.js"></script>
+    <link href="http://cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.css" rel="stylesheet" type="text/css" /> -->
+    <link rel="stylesheet" type="text/css" href="/static/app/index/css/login_common.css">
+    <link rel="stylesheet" type="text/css" href="/static/app/index/css/login_login.css">
+    <script src="http://www.jq22.com/jquery/jquery-1.10.2.js"></script>
+    <!--end-yjf-->
 
+<!--yjf-->
+ <!-- 会员登录注册 Modal -->
+<!-- Middle modal -->
+<div class="modal fade bs-example-modal-md" tabindex="-1" role="dialog" aria-labelledby="myMiddleModalLabel">
+  <div class="modal-dialog modal-md" role="document">
+    <div class="modal-content">
+<!--模态框中的内容-->
+<div>
+  <div class="login_cont">
+    <div class="login_nav">
+      <div class="nav_slider">
+        <a href="#" class="signup focus">注册</a>
+        <a href="#" class="signin">登录</a>
+      </div>
+    </div>
 
+    <form class="form-horizontal" action="{:url('index/Register/doregister')}" method="post" name='myUserform' id='myuserform'>
+
+      <div class="input_signup active form-group">
+        <input class="input" id="user_name" type="text" aria-label="用户名（包含字母／数字／下划线" placeholder="用户名" name="u_username">
+        <div class="hint">请填写符合格式的用户名</div>
+        <!-- <input class="input" id="user_email" type="text" aria-label="邮箱" placeholder="邮箱">
+        <div class="hint">请填写邮箱</div> -->
+        <input class="input" id="phone" type="text" class="account" aria-label="手机号（仅支持中国大陆）" placeholder="手机号（仅支持中国大陆）" name="u_phone">
+        <div class="hint">请填写手机号</div>
+
+        <input class="input" id="password" type="password" aria-label="密码" placeholder="密码（不少于 6 位）" name="u_password">
+        <div class="hint">请填写符合格式的密码</div>
+
+        <input class="input" id="repassword" type="password" aria-label="密码" placeholder="再次输入密码" name="u_repassword">
+        <div class="hint">请再次输入密码</div>
+
+        <input class="input" id="repassword" type="password" aria-label="密码" placeholder="请输入验证码" name="code">
+        <div class="hint">请再次输入密码</div>
+
+        <div><img src="{:captcha_src()}" alt="captcha" /></div>
+
+        <input type="submit" id="submit" class="button" name="button" value="注册">
+        </br>
+      </div>
+    </form>
+
+    <form class="form-horizontal" action="{:url('index/Login/doLogin')}" method="post" name='myUserform' id='myuserform'>
+      <div class="input_signin">
+        <input class="input" id="login_user_name" type="text" aria-label="用户名" placeholder="用户名" name="u_username">
+        <div class="hint" >请输入用户名</div>
+        <input class="input" id="login_password" type="password" aria-label="密码" placeholder="密码" name="u_password">
+        <div class="hint">请输入密码</div>
+
+        <div><img src="{:captcha_src()}" alt="captcha" /></div>
+
+        <input type="submit" id="button" class="button" name="button" value="登录" >
+        <div class="forget">
+          <a href="forget.html">忘记密码？</a>
+          </br>
+          </br>
+        </div>
+      </div>
+    </form>
+  </div>
+  <script type="text/javascript" src="/js/login.js"></script>
+  <script type="text/javascript" src="/js/form.js"></script> 
+  <script type="text/javascript" src="js/config.js"></script> 
+  <script type="text/javascript" src="/js/login_ajax.js"></script>
+</div>
+      <!--模态框中的内容结束-->
+    </div>
+  </div>
+</div>
+<!--yjf-->
 
 
 </head>
@@ -35,7 +112,6 @@
       background: url('images/bk.png');
       background-size: 100% 5000px;
     }
-
 </style>-->
 
 <body>
@@ -93,6 +169,7 @@
                           </div>
                           <div class="modal-body">
                               <form class="form-horizontal" action="{:url('index/BusRegister/doregister')}" method="post" name='myform' onsubmit='return checkForm()' id='myform'>
+
                                   <div class="form-group">
                                       <label for="inputName" class="col-sm-2 control-label">店铺名称</label>
                                       <div class="col-sm-6">
@@ -166,12 +243,12 @@
                   </div>
               </div>
 
-
-
             <div class="gt_login_element">
               <!-- <a href="#"><i class="icon-lock"></i>登陆</a> -->
-              <a href="#"><i class="glyphicon glyphicon-log-in"></i>注册</a>
-              <a href="#"><i class="glyphicon glyphicon-log-in"></i>登陆</a>
+              <a class="btn " data-toggle="modal" data-target=".bs-example-modal-md" ><i class="glyphicon glyphicon-flag"></i>注册/登录</a>
+
+              <!-- <a href="#"><i class="glyphicon glyphicon-log-in"></i>注册</a> -->
+             <!--  <a href="#"><i class="glyphicon glyphicon-log-in"></i>登陆</a> -->
               <a href="#"><i class="glyphicon glyphicon-log-out"></i>退出</a>
               <a href="#"><i class="glyphicon glyphicon-user"></i>个人中心</a>
               
@@ -1383,6 +1460,7 @@
         //         nav.style.top = '50px';
         //     }
         // }
+
       //验证商户注册的表单
     function checkForm() {
         //获取提交的数据
