--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -76,7 +76,7 @@
       </div>
     </form>
 
-<<<<<<< HEAD
+
     <style>
        
         #chat{
@@ -137,18 +137,18 @@
 
     {css href="/static/app/index/css/reset.css"}
     <!--{!&#45;&#45;三级地址联动&#45;&#45;}-->
-    {css href="http://cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.css" rel="stylesheet" type="text/css"}
+    <!--{css href="http://cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.css" rel="stylesheet" type="text/css"}-->
 
 
  
-=======
+
     <form class="form-horizontal" action="{:url('index/Login/doLogin')}" method="post" name='myUserform' id='myuserform'>
       <div class="input_signin">
         <input class="input" id="login_user_name" type="text" aria-label="用户名" placeholder="用户名" name="u_username">
         <div class="hint" >请输入用户名</div>
         <input class="input" id="login_password" type="password" aria-label="密码" placeholder="密码" name="u_password">
         <div class="hint">请输入密码</div>
->>>>>>> origin/zhangsan
+
 
         <div><img src="{:captcha_src()}" alt="captcha" /></div>
 
@@ -161,10 +161,10 @@
       </div>
     </form>
   </div>
-  <script type="text/javascript" src="/js/login.js"></script>
-  <script type="text/javascript" src="/js/form.js"></script> 
-  <script type="text/javascript" src="js/config.js"></script> 
-  <script type="text/javascript" src="/js/login_ajax.js"></script>
+  <script type="text/javascript" src="/static/app/index/js/login_login.js"></script>
+  <script type="text/javascript" src="/static/app/index/js/login_form.js"></script>
+  <script type="text/javascript" src="/static/app/indexjs/login_config.js"></script>
+  <script type="text/javascript" src="/static/app/index/js/login_ajax.js"></script>
 </div>
       <!--模态框中的内容结束-->
     </div>
