--- a/application/admin/view/index/busIndex.html
+++ b/application/admin/view/index/busIndex.html
@@ -29,22 +29,22 @@
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-    <script src="/statuc/admin/js/html5shiv.js"></script>
-    <script src="/statuc/admin/js/respond.min.js"></script>
+    <!--<script src="/static/app/admin/js/html5shiv.js"></script>-->
+    <!--<script src="/static/app/admin/js/respond.min.js"></script>-->
     <![endif]-->
 </head>
 <body class="sticky-header">
 
 <section>
     <!-- left side start-->
-    <div class="left-side sticky-left-side">
+    <div class="left-side sticky-left-side" style="background-color: #ABD7CD">
 
         <!--logo and iconic logo start-->
-        <div class="logo">
-            <a href="index.html"><img src="/static/app/admin/images/logo.png" alt=""></a>
+        <div class="logo" style="background-color: #ABD7CD">
+            <a href="index.html"><img width="144px" height="40px" src="{:empty($bus_res['b_logo'])?'/static/app/admin/images/1.jpg':$bus_res['b_logo'];}" alt=""></a>
         </div>
 
-        <div class="logo-icon text-center">
+        <div class="logo-icon text-center" style="background-color: #ABD7CD">
             <a href="index.html"><img src="/static/app/admin/images/logo_icon.png" alt=""></a>
         </div>
         <!--logo and iconic logo end-->
@@ -71,7 +71,7 @@
 
             <!--sidebar nav start-->
             <ul class="nav nav-pills nav-stacked custom-nav">
-                <li class="active"><a href="index.html"><i class="fa fa-home"></i> <span>控制列表</span></a></li>
+                <li class="active"><a href="index.html"><i class="fa fa-home"></i> <span>店铺首页</span></a></li>
                 <li class="menu-list"><a href=""><i class="fa fa-laptop"></i> <span>订单管理</span></a>
                     <ul class="sub-menu-list">
                         <li><a href="blank_page.html"> 订单列表</a></li>
@@ -82,16 +82,32 @@
 
                     </ul>
                 </li>
-                {volist name ='cate' id="cate"}
-                <li class="menu-list"><a href=""><i class="fa fa-book"></i> <span>{$cate.c_name}管理</span></a>
+
+                <li class="menu-list"><a href=""><i class="fa fa-book"></i> <span>住宿管理</span></a>
                     <ul class="sub-menu-list">
-                        <li><a href="{:url('admin/HotelCate/read',['id'=>$cate.id])}">{$cate.c_name}分类管理</a></li>
+                        <li><a href="{:url('admin/HotelCate/read',['id'=>'4'])}">住宿分类管理</a></li>
                     </ul>
                     <ul class="sub-menu-list">
-                        <li><a href="{:url('admin/Hotel/index')}">{$cate.c_name}列表</a></li>
+                        <li><a href="{:url('admin/Hotel/index')}">住宿列表</a></li>
                     </ul>
                 </li>
-                {/volist}
+
+                <li class="menu-list"><a href=""><i class="fa fa-book"></i> <span>旅游路线管理</span></a>
+                    <ul class="sub-menu-list">
+                        <li><a href="{:url('admin/RoutesCate/read',['id'=>'5'])}">旅游路线分类管理</a></li>
+                    </ul>
+                    <ul class="sub-menu-list">
+                        <li><a href="{:url('admin/Routes/index')}">旅游路线列表</a></li>
+                    </ul>
+                </li>
+                <li class="menu-list"><a href=""><i class="fa fa-book"></i> <span>特产美食</span></a>
+                    <ul class="sub-menu-list">
+                        <li><a href="{:url('admin/FoodCate/read',['id'=>'6'])}">分类管理</a></li>
+                    </ul>
+                    <ul class="sub-menu-list">
+                        <li><a href="{:url('admin/Food/index')}">商品列表</a></li>
+                    </ul>
+                </li>
                 <!--yjf-->
                  <li class="menu-list"><a href=""><i class="fa fa-book"></i> <span>活动管理</span></a>
                     <ul class="sub-menu-list">
@@ -189,7 +205,7 @@
     <div class="main-content" >
 
         <!-- header section start-->
-        <div class="header-section">
+        <div class="header-section" >
 
             <!--toggle button start-->
             <a class="toggle-btn"><i class="fa fa-bars"></i></a>
@@ -374,15 +390,15 @@
                         </div>
                     </li>
                     <li>
-                        <a href="#" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                            <img src="/static/app/admin/images/photos/user-avatar.png" alt="" />
-                            放logo{$bus_res['b_logo']}{$bus_res['b_name']}
+                        <a href="" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                            <img width='20px' height='20px' src="{:empty($bus_res['b_logo'])?'/static/app/admin/images/1.jpg':$bus_res['b_logo'];}" alt="" />
+                            {$bus_res['b_name']}
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-usermenu pull-right">
-                            <li><a href="#"><i class="fa fa-user"></i>  Profile</a></li>
+                            <li><a href="{:url('admin/BusInfo/index')}"><i class="fa fa-user"></i> 店铺中心</a></li>
                             <li><a href="#"><i class="fa fa-cog"></i>  Settings</a></li>
-                            <li><a href="#"><i class="fa fa-sign-out"></i> Log Out</a></li>
+                            <li><a href="{:url('admin/BusLogin/loginOut')}"><i class="fa fa-sign-out"></i>退出</a></li>
                         </ul>
                     </li>
 
@@ -392,7 +408,7 @@
 
         </div>
         <!-- header section end-->
-        {block name='main'}
+{block name='main'}
         <!-- page heading start-->
         <div class="page-heading">
             <h3>
@@ -888,7 +904,7 @@
             </div>
         </div>
         <!--body wrapper end-->
-        {/block}
+ {/block}
         <!--footer section start-->
         <footer>
             2017 &copy; AdminEx by <a href="{:url('index/index/index')}" target="_blank">魅丽乡村</a>
@@ -898,7 +914,9 @@
 
     </div>
     <!-- main content end-->
-   {/block}
+
+
+</section>
 {block name='myjs'}
 <!-- Placed js at the end of the document so the pages load faster -->
 <script src="/static/app/admin/js/jquery-1.10.2.min.js"></script>
@@ -942,9 +960,9 @@
 <!--Dashboard Charts-->
 <script src="/static/app/admin/js/dashboard-chart-init.js"></script>
 
-    <script src="/static/app/admin/js/toastr.min.js"></script>
+<script src="/static/app/admin/js/toastr.min.js"></script>
 
-    {/block}
+{/block}
 
 </body>
 </html>
