--- a/application/admin/view/food/cateList.html
+++ b/application/admin/view/food/cateList.html
@@ -34,7 +34,7 @@
                 </header>
                 <div class="panel-body">
                 {if condition="empty($list)"}
-                    <p>此栏目下暂无分类,去添加吧~~~</p>
+                    <p style="text-align: center">此栏目下暂无分类,去添加吧~~~</p>
                 {else /}
                     <div class="adv-table editable-table ">
                     </div>
@@ -63,6 +63,7 @@
                     </table>
                     {/if}
                 </div>
+            </section>
         </div>
 
     </div>
@@ -81,7 +82,7 @@
                             <label for="exampleInputEmail1">分类名称</label>
                             <input type="text" name="h_name" class="form-control" id="exampleInputEmail1" placeholder="请输入分类名称">
                             <input type="hidden" name="c_id" value="6">
-                        </div>
+
 
                         <button type="submit" class="btn btn-default">提交</button>
                     </form>
