--- a/application/admin/view/index/busIndex.html
+++ b/application/admin/view/index/busIndex.html
@@ -74,12 +74,12 @@
                 <li class="active"><a href="index.html"><i class="fa fa-home"></i> <span>控制列表</span></a></li>
                 <li class="menu-list"><a href=""><i class="fa fa-laptop"></i> <span>订单管理</span></a>
                     <ul class="sub-menu-list">
-                        <li><a href="blank_page.html"> 订单列表</a></li>
-                        <li><a href="blank_page.html"> 待处理订单</a></li>
-                        <li><a href="boxed_view.html"> 待发货订单</a></li>
-                        <li><a href="leftmenu_collapsed_view.html"> 已发货订单</a></li>
-                        <li><a href="horizontal_menu.html"> 已完成订单</a></li>
-
+                        <!--<li><a href="blank_page.html"> 订单列表</a></li>-->
+                        <li><a href="{:url('admin/busorder/unOrder')}"> 待处理订单</a></li>
+                        <li><a href="{:url('admin/busorder/unDiliver')}"> 待发货订单</a></li>
+                        <li><a href="{:url('admin/busorder/diliver')}"> 已发货订单</a></li>
+                        <li><a href="{:url('admin/busorder/done')}"> 已完成订单</a></li>
+                        <li><a href="{:url('admin/busorder/cancel')}"> 被取消订单</a></li>
                     </ul>
                 </li>
                 {volist name ='cate' id="cate"}
@@ -897,6 +897,7 @@
 
 
     </div>
+</section>
     <!-- main content end-->
    {/block}
 {block name='myjs'}
